manifests/argus-gtc-demo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argus-gtc-demo
  labels:
    app.kubernetes.io/part-of: argus-gtc-demo
